--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NaxexLayout</string>
     <string name="buy">Buy</string>
     <string name="sell">Sell</string>
+    <string name="add_available_stock">Add</string>
 </resources>
