Fixed FAB behavior (hide/show); Refactored and cleaned some code and added comments/some javadoc;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="bid">Bid</string>
     <string name="selling_toast">Sold %1$s at %2$s</string>
     <string name="buying_toast">Bought %1$s at %2$s</string>
+    <string name="symbol">Symbol</string>
 </resources>
