--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="selling_toast">Sold %1$s at %2$s</string>
     <string name="buying_toast">Bought %1$s at %2$s</string>
     <string name="symbol">Symbol</string>
+    <string name="cannot_download_stocks">Cannot download stocks.</string>
 </resources>
